# gui.ll

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  gui.ll.cmake
.kiro/specs/canvas-draw-curved-char/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/canvas-draw-png/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/canvas-draw-png-to-area/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/lcd-simulator/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/multi-platform-fatfs/: design.md
.kiro/specs/refactor-file-io-layer/: .config.kiro  design.md  requirements.md  tasks.md
Documentation/: GC9A01A.md
Toolchain/: wsl.sh
Toolchain/ESP32/: Setup.sh
Toolchain/RP2040/: Bind.ps1  Bind.sh  Flash.ps1  Flash.sh  Setup.sh
Toolchain/Simulator/: Setup.sh  gdb-wrapper.sh
sample/: sdcard.img
src/: Sample.c
src/Dependency/: zlibstatic.cmake
src/lib/: Types.h
src/lib/Driver/GC9A01/: Driver.c  Driver.h
src/lib/Fonts/: font20.c
src/lib/GUI/: Canvas.c  Canvas.h  GUI_Paint.c  GUI_Paint.h
src/lib/Helper/: Debug.h  FileHelper.c  FileHelper.h  PNGHelper.c  PNGHelper.h  Trigonometry.c  Trigonometry.h
src/lib/LCD/: LCD_1in28.c  LCD_1in28.h
src/lib/LCD/1in28/: LCDRenderer.c  LCDRenderer.h  LCDSetup.c  LCDSetup.h
src/lib/LCD/Simulator/: LCDRenderer.c  LCDRenderer.h  LCDSetup.c  LCDSetup.h
src/lib/Platform/ESP32/: CMakeLists.txt  DiskIO.c  HAL.c  HAL.h  HALConfig.h  PostExecutable.cmake  RTC.c  RTC.h  SDConfig.h  SDHWConfig.h
src/lib/Platform/RP2040/: DiskIO.c  HAL.c  HAL.h  HALConfig.h  PostExecutable.cmake  PreExecutable.cmake  RTC.c  SDConfig.h  SDHWConfig.h
src/lib/Platform/Simulator/: DiskIO.c  FileHelper.c  FileHelper.h  HAL.c  HAL.h  HALConfig.h  RTC.c  RTC.h  ff.h
